ansible/roles/cease-and-desist/files/manifests/02-license-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rkls
  namespace: licensing
  labels:
    name: rkls
spec:
  serviceAccountName: reform-kube
  containers:
    - image: docker.io/controlplaneoffsec/cease-and-desist:rks
      command: [ "sleep", "2d" ]
      name: rkls
      securityContext:
        allowPrivilegeEscalation: false
