ansible/roles/cease-and-desist/files/manifests/06-admin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: admin-console
  labels:
    name: admin-console
  namespace: administration
spec:
  serviceAccountName: sysadmin
  containers:
    - name: admin-console
      image: docker.io/controlplaneoffsec/cease-and-desist:admin-console
      command: [ "sleep", "2d" ]
      imagePullPolicy: IfNotPresent
      securityContext:
        allowPrivilegeEscalation: false
